fix: dark mode

--- a/src/components/wrappers/Prose.module.css
+++ b/src/components/wrappers/Prose.module.css
@@ -26,7 +26,7 @@
     box-shadow: var(--shadow-sm);
   }
 
-  @variant dark {
+  @media (prefers-color-scheme: dark) {
     & {
       color: var(--color-bblack-100);
 
